Link a pagina per mostrare la demo di valutazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -89,6 +89,7 @@ label.conferma_password=Conferma Password
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.crea_account=Crea Account
+label.creazione_nuovo_evento=Creazione nuovo evento
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
@@ -108,6 +109,7 @@ label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
 label.delega_checkbox=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
+label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
@@ -164,6 +166,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.locked=Bloccato
 label.lookup=Cerca
 label.modelli_allegato=Modelli di allegato
+label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
 label.natura_organizzazione=Natura dell'organizzazione
@@ -274,6 +277,8 @@ label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
+label.valutazioni_precedenti=Valutazioni precedenti
+label.valutatore=Valutatore
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
@@ -298,5 +303,3 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.creazione_nuovo_evento=Creazione nuovo evento
-label.modifica_evento=Modifica evento
