--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -89,6 +89,7 @@ label.conferma_password=Conferma Password
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.crea_account=Crea Account
+label.creazione_nuovo_evento=Creazione nuovo evento
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
@@ -164,6 +165,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.locked=Bloccato
 label.lookup=Cerca
 label.modelli_allegato=Modelli di allegato
+label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
 label.natura_organizzazione=Natura dell'organizzazione
@@ -270,6 +272,7 @@ label.validazione=Validazione
 label.valore=Valore
 label.valutazione=Valutazione
 label.visualizza_altri=Visualizza tutte le valutazioni
+label.visualizza_evento=Visualizzazione dell''evento {0}
 label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
@@ -298,5 +301,3 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.creazione_nuovo_evento=Creazione nuovo evento
-label.modifica_evento=Modifica evento
