sede operativa bug fix quando coincide

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -242,6 +242,7 @@ label.scheda_provider=Scheda provider
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
+label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
 label.sedi=Sedi
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
@@ -271,15 +272,15 @@ label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.validazione=Validazione
 label.valore=Valore
+label.valutatore=Valutatore
 label.valutazione=Valutazione
+label.valutazioni_precedenti=Valutazioni precedenti
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_evento=Visualizzazione dell''evento {0}
 label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
-label.valutazioni_precedenti=Valutazioni precedenti
-label.valutatore=Valutatore
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
