Ultime modifiche per engineering demo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -292,7 +292,8 @@ message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRi
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
-message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
+#message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
+message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
