--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -152,6 +152,7 @@ label.info_delega=Il richiedente è il legale rappresentante oppure è stato del
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Informazioni del provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.invia=Invia
@@ -281,6 +282,7 @@ label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
+label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 message.accesso_negato=ACCESSO NEGATO
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
