Bug fix allegati show e persona show

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,5 @@
 ######## LABEL ########
+#message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 Email=email non valida
 NotEmpty=campo obbligatorio
 NotNull=campo obbligatorio
@@ -177,6 +178,7 @@ label.nessun_allegato=Nessun allegato disponibile
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
+label.nessuna_persona=Nessuna persona disponibile
 label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
@@ -294,7 +296,6 @@ message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRi
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
-#message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
