fix quando non vi sono eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -158,7 +158,7 @@ label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.invia=Invia
 label.invia_domanda=Invia Domanda
-label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
+label.is_coordinatore=Inserisci come Coordinatore del Comitato Scierntifico
 label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
@@ -309,3 +309,4 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
