aggiunte label per la visualizzazione/modica dell'accreditamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -50,7 +50,7 @@ label.accreditamento_nome=Nome
 label.accreditamento_scadenza=Data Scadenza
 label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
-label.accreditamento_titolo=Domanda di Accreditamento {0} ({1})
+label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
@@ -168,6 +168,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.locked=Bloccato
 label.lookup=Cerca
 label.modelli_allegato=Modelli di allegato
+label.modifica=Modifica
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
@@ -269,6 +270,7 @@ label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
+label.torna_in_visualizzazione=Torna in visualizzazione
 label.tutte="Tutte"
 label.username=Username
 label.utenti=Utenti
