modifca label per evento nel piano formativo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -207,6 +207,7 @@ label.permessi=Permessi
 label.persone=Persone
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
+label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.prezzo=Prezzo
