Gestione allegati e dati dell'accreditamento non ancora inseriti in show

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -57,6 +57,7 @@ label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_evento=Aggiungi evento
 label.allegati=Allegati
 label.allegato=Allegato
+label.allegato_non_inserito=Allegato non ancora inserito
 label.altro_personale=Altro personale
 label.anno=Anno {0}
 label.annulla=Annulla
@@ -95,6 +96,7 @@ label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
 label.cv=Curriculum vitae
+label.da_inserire=(non inserito)
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
@@ -176,6 +178,7 @@ label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
+label.nessun_componente_comitato=Nessun componente del comitato scientifico inserito
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
