aggiunte label mancanti per la pagina di valutazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -281,6 +281,8 @@ label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.validazione=Validazione
+label.valido=Valido	
+label.non_valido=Non valido
 label.valore=Valore
 label.valutatore=Valutatore
 label.valutazione=Valutazione
