Controllo se la lista eventi è vuota

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -181,6 +181,7 @@ label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
 label.nessun_componente_comitato=Nessun componente del comitato scientifico inserito
+label.nessun_evento_list=Nessun evento disponibile
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
