--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -50,6 +50,7 @@ label.accreditamento_nome=Nome
 label.accreditamento_scadenza=Data Scadenza
 label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
+label.anagrafiche=Anagrafiche
 label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
