COntrollo univocità codicefiscale e partitaiva durante la registrazione di un nuovo provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,6 +37,7 @@ error.repeat=non corrisponde
 error.select=selezionare almeno un valore
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
+error.almenouno.empty=almeno uno dei campi è obbligatorio
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
