--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -60,6 +60,7 @@ label.allegato=Allegato
 label.allegato_non_inserito=Allegato non ancora inserito
 label.altro_personale=Altro personale
 label.anagrafiche=Anagrafiche
+label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
 label.attoCostitutivo=Atto Costitutivo e statuto
