--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -9,6 +9,7 @@ engineering.dati_inseriti=File inseriti con successo
 engineering.engineering=Engineering
 engineering.test_firma=Test Firma
 engineering.test_mypay=Test MyPay
+error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
@@ -37,7 +38,6 @@ error.repeat=non corrisponde
 error.select=selezionare almeno un valore
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
-error.almenouno.empty=almeno uno dei campi è obbligatorio
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
@@ -64,10 +64,12 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
+label.assegna=Assegna
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
 label.avanti=avanti
+label.azioni=Azioni
 label.benvenuto=Benvenuto
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
@@ -173,6 +175,7 @@ label.info_provider=Informazioni del provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
+label.inserisci=Inserisci
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
@@ -190,6 +193,8 @@ label.messaggi=Messaggi
 label.messaggio=Messaggio
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
+label.modifica=Modifica
+label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
@@ -266,6 +271,7 @@ label.richiesta_accreditamento=Richiesta di accreditamento
 label.richieste_accreditamento=Richieste di accreditamento
 label.ricordami=Ricordami
 label.rimuovi=Rimuovi
+label.rimuovi_evento=Rimuovi evento
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
@@ -283,9 +289,11 @@ label.settoriale=Settoriale
 label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
+label.sostituisci=Sostituisci
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
+label.status=Status
 label.straniera=Straniera
 label.sì=Sì
 label.tel_secondario=Telefono secondario
@@ -340,4 +348,3 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
