aggiunte nuove label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -177,6 +177,7 @@ label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci=Inserisci
 label.inserisci_piano_formativo=Inserisci Piano Formativo
+label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
