--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -349,3 +349,11 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.lista_piani_formativi=Lista dei piani formativi inseriti
+label.nessun_piano_formativo=Non ci sono piani formativi!
+label.nuovo_piano_formativo=Nuovo piano formativo
+label.Ok=Ok
+label.seleziona_anno=Seleziona l'anno del piano formativo
+label.lista_anni_selezionabili=Lista degli anni selezionabili
+message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
+label.visualizza_evento_modal=Visualizza evento
