Modificata label elimina

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -132,7 +132,7 @@ label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
-label.elimina=elimina
+label.elimina=Elimina
 label.email=E-mail
 label.enabled=Abilitato
 label.error=Errore
