--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
+label.Ok=Ok
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
@@ -176,6 +177,7 @@ label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci=Inserisci
+label.inserisci_nuova_anagrafica=Inserisci nuova anagrafica
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
 label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
@@ -187,7 +189,9 @@ label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
 label.lista_allegati=Lista degli allegati del provider {0}
+label.lista_anni_selezionabili=Lista degli anni selezionabili
 label.lista_persone=Lista delle persone del provider {0}
+label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.locked=Bloccato
 label.lookup=Cerca
 label.messaggi=Messaggi
@@ -207,6 +211,7 @@ label.nessun_componente_comitato=Nessun componente del comitato scientifico inse
 label.nessun_evento_list=Nessun evento disponibile
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_selezionato=Nessun file selezionato
+label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_persona=Nessuna persona disponibile
@@ -222,6 +227,7 @@ label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
+label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
 label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
@@ -276,6 +282,7 @@ label.rimuovi_evento=Rimuovi evento
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
+label.scelta_modalita=Scelta della modalità di inserimento
 label.scheda_provider=Scheda provider
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
@@ -285,6 +292,8 @@ label.sedi=Sedi
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
+label.seleziona_anagrafica=Seleziona anagrafica esistente
+label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
 label.settoriale=Settoriale
 label.sezione=Sezione
@@ -320,6 +329,7 @@ label.valutazione=Valutazione
 label.valutazioni_precedenti=Valutazioni precedenti
 label.visualizza_altri=Visualizza tutte le valutazioni
 label.visualizza_evento=Visualizzazione dell''evento {0}
+label.visualizza_evento_modal=Visualizza evento
 label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
@@ -344,16 +354,9 @@ message.inserito=Il {0} è stato salvato con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
+message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.lista_piani_formativi=Lista dei piani formativi inseriti
-label.nessun_piano_formativo=Non ci sono piani formativi!
-label.nuovo_piano_formativo=Nuovo piano formativo
-label.Ok=Ok
-label.seleziona_anno=Seleziona l'anno del piano formativo
-label.lista_anni_selezionabili=Lista degli anni selezionabili
-message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
-label.visualizza_evento_modal=Visualizza evento
