--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -124,7 +124,9 @@ label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati dive
 label.dati_legale=Dati del legale
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
-label.delega_checkbox=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
+label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
+label.legale_radio=Il richiedente è il Legale Rappresentante
+label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
@@ -162,6 +164,7 @@ label.gestione_password=Gestione Password
 label.gestione_utenti=Gestione Utenti
 label.gruppo=Gruppo
 label.gruppo_appartenenza=Gruppo di appartenenza
+label.ha_partita_IVA=Sei titolare di Partita IVA?
 label.hai_gia_account=Hai già un account?
 label.home=Torna alla Home
 label.home_page=Benvenuto in ECM - Regione Veneto
