Restrizione Upload dei file solo a PDF e P7M

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -22,6 +22,7 @@ error.empty=campo obbligatorio
 error.invalid=formato non corretto
 error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
+error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.min=valore troppo corto
 error.name.duplicated=nome già registrato
 error.number=il valore deve essere numerico
