--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -59,7 +59,7 @@ label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_evento=Aggiungi evento
 label.allegati=Allegati
 label.allegato=Allegato
-label.allegato_non_inserito=Allegato non ancora inserito
+label.allegato_non_inserito=Allegato non inserito
 label.altro_personale=Altro personale
 label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
@@ -124,14 +124,13 @@ label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati dive
 label.dati_legale=Dati del legale
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
-label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
-label.legale_radio=Il richiedente è il Legale Rappresentante
-label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
+label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
 label.devono_pagare_quota_annuale=Devono pagare la quota annuale
 label.devono_pagare_quota_eventi=Devono pagare la quota degli eventi
+label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
@@ -144,6 +143,7 @@ label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
+label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
 label.evento=Evento
@@ -151,8 +151,8 @@ label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
 label.evento_titolo=Evento {0}
 label.facoltativo=facoltativo
-label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
-label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
+label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni
+label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
 label.fax=FAX
 label.fileDaFirmare=File da firmare
 label.file_descrizione=Descrizione
@@ -190,6 +190,7 @@ label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scierntifico
 label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
+label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
 label.lista_allegati=Lista degli allegati del provider {0}
@@ -264,6 +265,7 @@ label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
 label.ragione_sociale=Ragione sociale
+label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.recupera_password=Recupera password
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
