aggiunte label richieste

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,10 +19,10 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
+error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.invalid=formato non corretto
 error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
-error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.min=valore troppo corto
 error.name.duplicated=nome già registrato
 error.number=il valore deve essere numerico
@@ -135,6 +135,7 @@ label.dichiarazioneEsclusione=Dichiarazione esclusione conflitto di interessi pe
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
+label.discipline_riepilogo=Riepilogo delle discipline selezionate
 label.domande_accreditamento=Domande di Accreditamento
 label.elimina=Elimina
 label.email=E-mail
@@ -145,7 +146,7 @@ label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
-label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
+label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
 label.evento=Evento
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
@@ -219,6 +220,7 @@ label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
+label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_persona=Nessuna persona disponibile
 label.no=No
@@ -230,6 +232,7 @@ label.non_valido=Non valido
 label.not_enabled=Disabilitato
 label.note=Note
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
+label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
