Check comitatoScientifico [D - bis]

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -32,6 +32,7 @@ error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un 
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
+error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
