--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -32,10 +32,10 @@ error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un 
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
-error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
+error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
 error.select=selezionare almeno un valore
 error.url=URL errato
@@ -44,6 +44,7 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
+label.abilita_id_editabili=Abilita campi editabili
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
@@ -124,6 +125,7 @@ label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del legale
+label.dati_non_inseriti= (dati non inseriti)
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
@@ -149,6 +151,7 @@ label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
+label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
@@ -211,6 +214,7 @@ label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_evento=Modifica evento
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.mostra_riepilogo=Mostra riepilogo
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
@@ -288,8 +292,10 @@ label.richiesta_accreditamento=Richiesta Accreditamento
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richieste_accreditamento=Richieste di accreditamento
 label.ricordami=Ricordami
+label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.rimuovi=Rimuovi
 label.rimuovi_evento=Rimuovi evento
+label.risposta_del_provider=Risposta del Provider
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
@@ -334,7 +340,6 @@ label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.validazione=Validazione
 label.valido=Valido
-label.valore=Valore
 label.valutatore=Valutatore
 label.valutazione=Valutazione
 label.valutazioni_precedenti=Valutazioni precedenti
