--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -238,7 +238,8 @@ label.not_enabled=Disabilitato
 label.note=Note
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
-label.nuova_domanda=Nuova domanda
+label.nuova_domanda_provvisoria=Nuova domanda Provvisoria
+label.nuova_domanda_standard=Nuova domanda Standard
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
 label.nuovo_piano_formativo=Nuovo piano formativo
