--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -377,3 +377,4 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
