Modifiche varie di fino

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ error.repeat=non corrisponde
 error.select=selezionare almeno un valore
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
+label.gestione_profili=Gestione Profili
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -68,6 +69,7 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
+label.nuovo_utente=Nuovo Utente
 label.assegna=Assegna
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
@@ -270,6 +272,7 @@ label.professioniAccreditamento=Accreditamento per professioni
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
+label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
@@ -366,6 +369,7 @@ message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
+message.evento_salvato=L'evento è stato salvato con successo.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
@@ -377,5 +381,3 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-message.evento_salvato=L'evento è stato salvato con successo.
-label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
