cambiamenti grafici del venerdi alle 19:39

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,6 +45,7 @@ label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
 label.abilita_id_editabili=Abilita campi editabili
+label.abilitato=Abilitato
 label.accedi=Accedi
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
@@ -79,6 +80,9 @@ label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
 label.campo=Campo
+label.caninsert_domanda_accreditamento_standard=Inserimento Domanda Accreditamento Standard
+label.caninsert_eventi=Inserimento Eventi
+label.caninsert_piano_formativo=Inserimento Piano Formativo
 label.cap=CAP
 label.caratteri_rimanenti=caratteri rimanenti
 label.cellulare=Cellulare
@@ -207,6 +211,7 @@ label.locked=Bloccato
 label.lookup=Cerca
 label.messaggi=Messaggi
 label.messaggio=Messaggio
+label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
 label.modelli_allegato=Modelli di allegato
 label.modifica=Modifica
 label.modifica=Modifica
@@ -232,6 +237,7 @@ label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
 label.nome_utente=Nome Utente
+label.non_abilitato=Non abilitato
 label.non_inserito=non inserito
 label.non_valido=Non valido
 label.not_enabled=Disabilitato
@@ -270,6 +276,7 @@ label.professioniAccreditamento=Accreditamento per professioni
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
+label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
@@ -366,6 +373,7 @@ message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
+message.evento_salvato=L'evento è stato salvato con successo.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
@@ -375,7 +383,8 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
+message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-message.evento_salvato=L'evento è stato salvato con successo.
-label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
+label.provider_accreditamento=Provider:
+label.tipo_provider=Tipo:
