--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -38,9 +38,9 @@ error.password_repeat=la password non coincide
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
 error.select=selezionare almeno un valore
+error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
-label.gestione_profili=Gestione Profili
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
@@ -70,7 +70,6 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
 label.annulla=Annulla
-label.nuovo_utente=Nuovo Utente
 label.assegna=Assegna
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
@@ -173,6 +172,7 @@ label.firma_digitalmente=Firma digitalmente
 label.funzionigramma=Funzionigramma
 label.generale=Generale
 label.gestione_password=Gestione Password
+label.gestione_profili=Gestione Profili
 label.gestione_utenti=Gestione Utenti
 label.gruppo=Gruppo
 label.gruppo_appartenenza=Gruppo di appartenenza
@@ -200,6 +200,7 @@ label.inserito_piano_formativo=Evento del Piano Formativo relativo all''anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scierntifico
+label.istruzioni_psw=La password deve essere composta da minimo 8 e massimo 12 caratteri, deve inoltre contenere almeno un numero e una lettera
 label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
 label.legale_radio=Il richiedente è il Legale Rappresentante
@@ -252,6 +253,7 @@ label.nuova_password=Nuova Password
 label.nuovo=Nuovo
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
+label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
 label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
 label.ok=ok
@@ -280,6 +282,7 @@ label.profili=Profili
 label.profilo=Profilo
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
+label.provider_accreditamento=Provider:
 label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
@@ -337,6 +340,7 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
+label.tipo_provider=Tipo:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.titolo=Titolo
@@ -388,5 +392,3 @@ message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.provider_accreditamento=Provider:
-label.tipo_provider=Tipo:
