aggiunte label mancanti

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -66,6 +66,7 @@ label.allegati=Allegati
 label.allegato=Allegato
 label.allegato_non_inserito=Allegato non inserito
 label.altro_personale=Altro personale
+label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anno=Anno {0}
